Moved RDD client into lens-ml-lib

--- a/lens-ml-lib/pom.xml
+++ b/lens-ml-lib/pom.xml
@@ -33,6 +33,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.lens</groupId>
+            <artifactId>lens-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
