--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <powermock.version>1.4.12</powermock.version>
-    <hive.version>0.13.2-inm</hive.version>
+    <hive.version>0.13.3-inm-SNAPSHOT</hive.version>
     <jetty.version>6.1.26</jetty.version>
     <jersey.version>2.3.1</jersey.version>
     <grizzly.version>2.3.6</grizzly.version>
@@ -742,12 +742,12 @@
   <modules>
     <module>lens-api</module>
     <module>lens-server-api</module>
-    <module>lens-storage-db</module>
     <module>lens-cube</module>
+    <module>lens-storage-db</module>
+    <module>lens-query-lib</module>
     <module>lens-driver-hive</module>
     <module>lens-driver-impala</module>
     <module>lens-driver-jdbc</module>
-    <module>lens-query-lib</module>
     <module>lens-server</module>
     <module>lens-client</module>
     <module>lens-cli</module>
