--- a/pom.xml
+++ b/pom.xml
@@ -217,9 +217,60 @@
           <artifactId>maven-dependency-plugin</artifactId>
           <version>2.8</version>
         </plugin>
+        <plugin>
+           <groupId>org.apache.rat</groupId>
+           <artifactId>apache-rat-plugin</artifactId>
+           <version>0.7</version>
+         </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
+       <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <configuration>
+          <useDefaultExcludes>true</useDefaultExcludes>
+          <useMavenDefaultExcludes>true</useMavenDefaultExcludes>
+          <useIdeaDefaultExcludes>true</useIdeaDefaultExcludes>
+          <useEclipseDefaultExcludes>true</useEclipseDefaultExcludes>
+          <excludes>
+             <exclude>**/*.txt</exclude>
+             <exclude>.git/**</exclude>
+             <exclude>.idea/**</exclude>
+             <exclude>**/*.twiki</exclude>
+             <exclude>**/*.iml</exclude>
+             <exclude>**/target/**</exclude>
+             <exclude>**/activemq-data/**</exclude>
+             <exclude>**/build/**</exclude>
+             <exclude>*.patch</exclude>
+             <exclude>**/*.log</exclude>
+             <exclude>**/logs/**</exclude>
+             <exclude>**/.classpath</exclude>
+             <exclude>**/.project</exclude>
+             <exclude>**/.settings/**</exclude>
+             <exclude>**/test-output/**</exclude>
+             <exclude>**/maven-eclipse.xml</exclude>
+             <exclude>**/.externalToolBuilders/**</exclude>
+             <exclude>.gitignore</exclude>
+             <exclude>README.*</exclude>
+             <exclude>**/*.diff</exclude>
+             <exclude>**/*.png</exclude>
+             <exclude>**/*.pptx</exclude>
+             <exclude>**/*.jar</exclude>
+             <exclude>**/*.data</exclude>
+             <exclude>**/control</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+           <execution>
+             <id>rat-check</id>
+             <goals>
+               <goal>check</goal>
+             </goals>
+             <phase>verify</phase>
+           </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
