--- a/pom.xml
+++ b/pom.xml
@@ -267,7 +267,7 @@
              <goals>
                <goal>check</goal>
              </goals>
-             <phase>verify</phase>
+             <phase>package</phase>
            </execution>
         </executions>
       </plugin>
