--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
           <dependency>
             <groupId>org.apache.lens</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
           </dependency>
         </dependencies>
         <executions>
