--- a/lens-cube/src/test/resources/log4j.properties
+++ b/lens-cube/src/test/resources/log4j.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-log4j.rootLogger = INFO, out
+log4j.rootLogger = WARN, out
 
 log4j.appender.out = org.apache.log4j.ConsoleAppender
 log4j.appender.out.layout = org.apache.log4j.PatternLayout
