--- a/lens-cube/src/test/resources/log4j.properties
+++ b/lens-cube/src/test/resources/log4j.properties
@@ -17,9 +17,14 @@
 # under the License.
 #
 
-log4j.rootLogger = WARN, out
+log4j.rootLogger = WARN, ROOT
 
 log4j.appender.out = org.apache.log4j.ConsoleAppender
 log4j.appender.out.layout = org.apache.log4j.PatternLayout
 log4j.appender.out.layout.ConversionPattern = %d (%t) [%p - %l] %m%n
 log4j.additivity.foo.bar.Baz=false
+
+log4j.appender.ROOT=org.apache.log4j.RollingFileAppender
+log4j.appender.ROOT.File=target/test.log
+log4j.appender.ROOT.layout=org.apache.log4j.PatternLayout
+log4j.appender.ROOT.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
