--- a/lens-cube/pom.xml
+++ b/lens-cube/pom.xml
@@ -49,9 +49,13 @@
         <artifactId>hive-service</artifactId>
       </dependency>
       <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+      </dependency>
+      <dependency>
         <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-    </dependency>
+        <artifactId>mockito-all</artifactId>
+      </dependency>
        <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-common</artifactId>
