--- a/lens-client/pom.xml
+++ b/lens-client/pom.xml
@@ -53,6 +53,7 @@
       <groupId>org.apache.lens</groupId>
       <artifactId>lens-server</artifactId>
       <version>${project.version}</version>
+      <classifier>classes</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
