LENS-82 : Move Mock* classes in lens-server-api to test jar (Raju Bairishetti via amareshwari)

--- a/lens-client/pom.xml
+++ b/lens-client/pom.xml
@@ -122,6 +122,13 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.lens</groupId>
+      <artifactId>lens-server-api</artifactId>
+      <type>test-jar</type>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>    
