--- a/lens-cube/pom.xml
+++ b/lens-cube/pom.xml
@@ -68,6 +68,13 @@
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-mapreduce-client-core</artifactId>
       </dependency>
+      <dependency>
+        <groupId>org.apache.lens</groupId>
+        <artifactId>lens-server-api</artifactId>
+        <type>test-jar</type>
+        <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
 
     <build>
