--- a/lens-server/pom.xml
+++ b/lens-server/pom.xml
@@ -210,7 +210,13 @@
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
       </dependency>
-
+      <dependency>
+        <groupId>org.apache.lens</groupId>
+        <artifactId>lens-server-api</artifactId>
+        <type>test-jar</type>
+        <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
 
     <build>
