--- a/lens-driver-jdbc/pom.xml
+++ b/lens-driver-jdbc/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>lens-parent</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
   </parent>
     
   <artifactId>lens-driver-jdbc</artifactId>
