--- a/lens-client/pom.xml
+++ b/lens-client/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>lens-parent</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.2.2</version>
   </parent>
     
   <artifactId>lens-client</artifactId>
