--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
   <groupId>org.apache.lens</groupId>
   <artifactId>lens-parent</artifactId>
-  <version>1.2.2-SNAPSHOT</version>
+  <version>1.2.2</version>
   <name>Lens</name>
   <packaging>pom</packaging>
   <description>Unified Analytics Platform</description>
@@ -85,7 +85,7 @@
     <connection>scm:git:https://github.com/InMobi/grill.git</connection>
     <url>https://github.com/InMobi/grill</url>
     <developerConnection>scm:git:https://github.com/InMobi/grill.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>lens-parent-1.2.2</tag>
   </scm>
 
   <reporting>
@@ -320,7 +320,7 @@
           <dependency>
             <groupId>org.apache.lens</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2</version>
           </dependency>
         </dependencies>
         <executions>
