--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,10 @@
         <targetPath>${mvn.deb.build.dir}/control</targetPath>
         <filtering>true</filtering>
       </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
     </resources>
 
     <pluginManagement>
