--- a/lens-api/pom.xml
+++ b/lens-api/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>lens-parent</artifactId>
         <groupId>org.apache.lens</groupId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>lens-api</artifactId>
