--- a/lens-cli/pom.xml
+++ b/lens-cli/pom.xml
@@ -84,6 +84,12 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.lens</groupId>
+      <artifactId>lens-driver-jdbc</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.shell</groupId>
@@ -198,6 +204,5 @@
       </plugin>
     </plugins>
   </build>
+</project>
 
-
-</project>    
