--- a/lens-client/pom.xml
+++ b/lens-client/pom.xml
@@ -84,6 +84,12 @@
       <type>test-jar</type>
     </dependency>
     <dependency>
+      <groupId>org.apache.lens</groupId>
+      <artifactId>lens-driver-jdbc</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-multipart</artifactId>
     </dependency>
@@ -130,5 +136,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+</project>
 
-</project>    
