--- a/lens-examples/pom.xml
+++ b/lens-examples/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>lens-parent</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>1.2.4-SNAPSHOT</version>
+    <version>1.2.4</version>
   </parent>
     
   <artifactId>lens-examples</artifactId>
