--- a/checkstyle/pom.xml
+++ b/checkstyle/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.apache.lens</groupId>
     <artifactId>checkstyle</artifactId>
     <name>Lens Checkstyle Rules</name>
-   <version>1.4</version>
+   <version>1.5-SNAPSHOT</version>
 
   <build>
     <plugins>
