--- a/lens-driver-hive/pom.xml
+++ b/lens-driver-hive/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <artifactId>lens-parent</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>1.2.5</version>
+    <version>1.2.6-SNAPSHOT</version>
   </parent>
 
   <properties>
