--- a/lens-server-api/pom.xml
+++ b/lens-server-api/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>lens-parent</artifactId>
         <groupId>org.apache.lens</groupId>
-        <version>1.2.5</version>
+        <version>1.2.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>lens-server-api</artifactId>
