--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 
   <groupId>org.apache.lens</groupId>
   <artifactId>apache-lens</artifactId>
-  <version>2.1.0-incubating-SNAPSHOT</version>
+  <version>2.1.0-inm-SNAPSHOT</version>
   <name>Lens</name>
   <packaging>pom</packaging>
   <description>Unified Analytics Platform</description>
@@ -137,9 +137,19 @@
   </ciManagement>
 
   <distributionManagement>
+    <repository>
+      <id>InMobiReleases</id>
+      <name>InMobi release Repository</name>
+      <url>https://github.com/InMobi/mvn-repo/raw/master/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>InMobiSnapshots</id>
+      <name>InMobi snapshot Repository</name>
+      <url>https://github.com/InMobi/mvn-repo/raw/master/snapshots</url>
+    </snapshotRepository>
     <site>
       <id>lens-site</id>
-      <url>http://lens.incubator.apache.org/</url>
+      <url>https://inmobi.github.io/grill/</url>
     </site>
   </distributionManagement>
 
@@ -168,9 +178,9 @@
   </mailingLists>
 
   <scm>
-    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-lens.git</connection>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-lens.git</developerConnection>
-    <url>https://git-wip-us.apache.org/repos/asf/incubator-falcon.git</url>
+    <connection>scm:git:https://github.com/InMobi/grill.git</connection>
+    <url>https://github.com/InMobi/grill</url>
+    <developerConnection>scm:git:https://github.com/InMobi/grill.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
