--- a/pom.xml
+++ b/pom.xml
@@ -441,7 +441,7 @@
           <dependency>
             <groupId>org.apache.lens</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>2.1.0-incubating-SNAPSHOT</version>
+            <version>2.1.0-inm-SNAPSHOT</version>
           </dependency>
         </dependencies>
         <executions>
@@ -1068,7 +1068,7 @@
               <dependency>
                 <groupId>org.apache.lens</groupId>
                 <artifactId>checkstyle</artifactId>
-                <version>2.1.0-incubating-SNAPSHOT</version>
+                <version>2.1.0-inm-SNAPSHOT</version>
               </dependency>
             </dependencies>
             <executions>
