--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,14 @@
           <artifactId>maven-war-plugin</artifactId>
           <version>${war.plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.1</version>
+          <configuration>
+            <arguments>${arguments}</arguments>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
