--- a/lens-api/pom.xml
+++ b/lens-api/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>apache-lens</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>2.1.5-inm</version>
+    <version>2.1.6-inm-SNAPSHOT</version>
   </parent>
 
   <artifactId>lens-api</artifactId>
