--- a/lens-query-lib/pom.xml
+++ b/lens-query-lib/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <artifactId>apache-lens</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>2.2.1-inm</version>
+    <version>2.2.2-inm-SNAPSHOT</version>
   </parent>
 
   <artifactId>lens-query-lib</artifactId>
