[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 
   <groupId>org.apache.lens</groupId>
   <artifactId>apache-lens</artifactId>
-  <version>2.4.0-inm</version>
+  <version>2.4.1-inm-SNAPSHOT</version>
   <name>Lens</name>
   <packaging>pom</packaging>
   <description>Unified Analytics Platform</description>
@@ -334,7 +334,7 @@
     <connection>scm:git:https://github.com/InMobi/grill.git</connection>
     <url>https://github.com/InMobi/grill</url>
     <developerConnection>scm:git:https://github.com/InMobi/grill.git</developerConnection>
-    <tag>apache-lens-2.4.0-inm</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <reporting>
@@ -631,7 +631,7 @@
           <dependency>
             <groupId>org.apache.lens</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>2.4.0-inm</version>
+            <version>2.4.1-inm-SNAPSHOT</version>
           </dependency>
         </dependencies>
         <executions>
@@ -1638,7 +1638,7 @@
               <dependency>
                 <groupId>org.apache.lens</groupId>
                 <artifactId>checkstyle</artifactId>
-                <version>2.4.0-inm</version>
+                <version>2.4.1-inm-SNAPSHOT</version>
               </dependency>
             </dependencies>
             <executions>
