--- a/lens-server-api/pom.xml
+++ b/lens-server-api/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>apache-lens</artifactId>
     <groupId>org.apache.lens</groupId>
-    <version>2.7.4-inm-SNAPSHOT</version>
+    <version>2.7.4-inm</version>
   </parent>
 
   <artifactId>lens-server-api</artifactId>
