--- a/lens-api/src/main/resources/lens-errors.conf
+++ b/lens-api/src/main/resources/lens-errors.conf
@@ -384,6 +384,12 @@ lensCubeErrorsForMetastore = [
     errorMsg = "Partition filter can not be null or empty"
   }
 
+  {
+      errorCode = 3106
+      httpStatusCode = ${BAD_REQUEST}
+      errorMsg = "Fact %s not of type %s"
+    }
+
 ]
 
 lensDriverErrors = [
