Disabling lens_ui for trusty build

--- a/pom.xml
+++ b/pom.xml
@@ -1755,7 +1755,7 @@
     <module>lens-ml-lib</module>
     <module>lens-ml-dist</module>
     <module>lens-regression</module>
-    <module>lens-ui</module>
+    <!--<module>lens-ui</module>-->
     <module>contrib</module>
   </modules>
 
